# brasstacks-math

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/brasstacks/math/: Vec2.hpp  Vec3.hpp  Vec4.hpp  math.hpp  pch.hpp
src/: CMakeLists.txt  Vec2.cpp  Vec3.cpp  Vec4.cpp  math.cpp
tests/: CMakeLists.txt  helpers.hpp
tests/vectors/: basics.cpp  basics_vec2.cpp  basics_vec3.cpp  basics_vec4.cpp  cross_product.cpp  dot_product.cpp  dot_product_vec2.cpp  dot_product_vec3.cpp  dot_product_vec4.cpp  examples.cpp  exercises.cpp
